--- a/dredom-xml-schema/pom.xml
+++ b/dredom-xml-schema/pom.xml
@@ -6,6 +6,8 @@
   <artifactId>dredom-xml-schema</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
+  
+  <description>Generate schema xsd from Java source files</description>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -14,11 +16,42 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
+	  <dependency>
+	    <groupId>javax.xml.bind</groupId>
+	    <artifactId>jaxb-api</artifactId>
+	    <version>2.2.11</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.sun.xml.bind</groupId>
+	    <artifactId>jaxb-core</artifactId>
+	    <version>2.2.11</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.sun.xml.bind</groupId>
+	    <artifactId>jaxb-impl</artifactId>
+	    <version>2.2.11</version>
+	</dependency>
+	<dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+	      <version>4.12</version>
+	      <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  <build>
+    <plugins>
+            <!-- mvn jaxb2:schemagen -->
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>jaxb2-maven-plugin</artifactId>
+            <version>2.2</version>
+             <configuration>
+                <sources>
+                    <source>src/main/java/com/dredom/xml/schema/model</source>
+                </sources>
+             </configuration>
+        </plugin>
+    </plugins>
+  </build>
 </project>
